[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-core"
version = "0.1.0"
description = "Local-only autonomous agent skeleton with strict logging and graceful shutdown"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agent-core = "agent_core.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
